;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.4.9:
  * bug fix: fixed x86 GC bug causing heap corruption. (lp#1749369)

changes in sbcl-1.4.8 relative to sbcl-1.4.7:
  * bug fix: redefinition of method combinations now does the expected thing;
    generic functions using that method combination have their effective
    methods lazily recomputed according to the new definition of the method
    combination.  (Reported by Didier Verna at ELS 2018)
  * bug fix: :arguments argument to the long form of DEFINE-METHOD-COMBINATION
    is now implemented more correctly, supporting suppliedp variables and
    &optional defaults.  (Reported by Bruno Haible, lp#309084)

changes in sbcl-1.4.7 relative to sbcl-1.4.6:
  * enhancement: better handling of unknown keyword arguments (lp#1750466)
  * enhancement: namestrings can now be computed for certain pathnames that
    previously did not have namestrings because of #\. characters in their
    name and/or type components.
  * bug fix: compiling a SLEEP call with a float positive infinity argument no
    longer causes an internal error (lp#1754081)
  * bug fix: keyword arguments provided to a generic function with
    EQL-specialized methods are checked more correctly (reported by Syll,
    lp#1760987)

changes in sbcl-1.4.6 relative to sbcl-1.4.5:
  * enhancement: DISASSEMBLE on a symbol naming a macro will disassemble
    the expander, not the code that traps attempted FUNCALL of the macro.
  * enhancement: The sb-sprof contrib now provides an experimental interface
    for accessing collected profiler data.
  * enhancement: The instruction-level profiling of the sb-prof contrib
    annotates the disassembler output more efficiently.
  * optimization: improved dynamic-extent handling of nested variables.

changes in sbcl-1.4.5 relative to sbcl-1.4.4:
  * minor incompatible change: building with/without the :sb-package-locks
    feature is no longer an option. Package locks are always compiled in,